@@ -333,6 +333,8 @@ EXT_TYPE = [
   [ "movie"     , "video/x-sgi-movie"              ],
   [ "mp2"       , "audio/mpeg"                     ],
   [ "mp3"       , "audio/mpeg"                     ],
+  [ "mp4"       , "video/mp4"                      ],
+  [ "m4v"       , "video/mp4"                      ],
   [ "mpe"       , "video/mpeg"                     ],
   [ "mpeg"      , "video/mpeg"                     ],
   [ "mpg"       , "video/mpeg"                     ],
